# todolist

./: Makefile  README.md  data_tasks.py  main.py  model_Task.py  pyproject.toml
templates/: active.html  addForm.html  base.html  finished.html  home.html  index.html
tests/: test_ToDoList.py  test_add_task.py  test_move.py
