[tool.poetry]
name = "taskList"
version = "0.1.0"
description = ""
authors = ["Puzanovim <puzanovim@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.60.1"
uvicorn = "^0.11.6"
jinja2 = "^2.11.2"
aiofiles = "^0.5.0"
python-multipart = "^0.0.5"
pytest = "^5.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
